@@ -1,10 +1,11 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         perlindex
-version:      1.302
+version:      1.4
 version_from: 
 installdirs:  site
 requires:
+    Text::English:                 0
 
 distribution_type: module
 generated_by: ExtUtils::MakeMaker version 6.17
