@@ -1,19 +1,16 @@
 #!/usr/bin/perl
 #                              -*- Mode: Perl -*- 
-# $Basename: Makefile.PL $
-# $Revision: 1.3 $
 # Author          : Ulrich Pfeifer
 # Created On      : Tue May 27 17:27:28 1997
-# Last Modified On: Sun May  2 15:54:11 2004
+# Last Modified On: Sun Apr  3 13:25:47 2005
 # Language        : CPerl
-# Update Count    : 19
-# 
-# (C) Copyright 1997-2004, Ulrich Pfeifer, all rights reserved.  This
+# Update Count    : 26
+#
+# (C) Copyright 1997-2005, Ulrich Pfeifer, all rights reserved.  This
 # file is free software; you can redistribute it and/or modify it
 # under the same terms as Perl itself.
 
-# $Format: "\$VERSION = \"$ReleaseVersion$\";"$
-$VERSION = "1.302";
+$VERSION = "1.4";
 
 use ExtUtils::MakeMaker;
 # See lib/ExtUtils/MakeMaker.pm for details of how to influence
@@ -26,6 +23,7 @@ WriteMakefile(
     'DEFINE'       => '',     # e.g., '-DHAVE_SOMETHING' 
     'INC'          => '',     # e.g., '-I/usr/include/other' 
     'dist'         => { SUFFIX => "gz", COMPRESS => "gzip -f"},
+    'PREREQ_PM'    => { 'Text::English' => 0 },
     'EXE_FILES'    => [ 'perlindex' ],
-     'clean'       => { 'FILES' => 'perlindex' },
+    'clean'        => { 'FILES' => 'perlindex' },
 );
